# mcp-client

./: .env  client.py  computer_config.py  get_weather.py  pyproject.toml  server.py
